[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/GUI/Inventory/ItemStatsUI.gd" type="Script" id=1]
[ext_resource path="res://Assets/GUI/Inventory/ItemStats.gd" type="Script" id=2]

[node name="ItemStatsUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="InventoryUI" type="MarginContainer" parent="."]
margin_left = 650.0
margin_top = 150.0
margin_right = 800.0
margin_bottom = 250.0
rect_min_size = Vector2( 150, 100 )
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="InventoryUI"]
margin_right = 154.0
margin_bottom = 100.0
color = Color( 0.203922, 0.203922, 0.203922, 0.439216 )
__meta__ = {
"_edit_lock_": true
}

[node name="InventoryPanels" type="VBoxContainer" parent="InventoryUI"]
margin_right = 154.0
margin_bottom = 100.0
rect_min_size = Vector2( 150, 100 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="MarginContainer" parent="InventoryUI/InventoryPanels"]
margin_right = 154.0
margin_bottom = 15.0
rect_min_size = Vector2( 150, 15 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="InventoryUI/InventoryPanels/Title"]
margin_right = 154.0
margin_bottom = 15.0
rect_min_size = Vector2( 150, 15 )
text = "Item Stats"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="ItemStats" type="MarginContainer" parent="InventoryUI/InventoryPanels"]
margin_top = 19.0
margin_right = 154.0
margin_bottom = 34.0
rect_min_size = Vector2( 150, 15 )
script = ExtResource( 2 )

[node name="StatContainer" type="HBoxContainer" parent="InventoryUI/InventoryPanels/ItemStats"]
margin_right = 154.0
margin_bottom = 15.0
rect_min_size = Vector2( 150, 0 )

[node name="Amount" type="Label" parent="InventoryUI/InventoryPanels/ItemStats/StatContainer"]
margin_right = 75.0
margin_bottom = 15.0
rect_min_size = Vector2( 75, 15 )
text = "Amount"
align = 1

[node name="Stat" type="Label" parent="InventoryUI/InventoryPanels/ItemStats/StatContainer"]
margin_left = 79.0
margin_right = 154.0
margin_bottom = 15.0
rect_min_size = Vector2( 75, 15 )
text = "Stat"
align = 1
